SELC-5324 fix: Sonar